Elimino Alert y lo reemplazo por un mensaje dentro de un div

--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@ button {
 
 }
 
-#copy1, #comeBack1, #restart1, #copy2, #comeBack2, #restart2, #cipher, #decipher {
+#copy1, #comeBack1, #restart1, #copy2, #comeBack2, #restart2, #cipher, #decipher, #invalid1, #invalid2 {
   display: none;
 }
 
